--- a/tidydata.Rmd
+++ b/tidydata.Rmd
@@ -22,11 +22,60 @@ library(pdftools)
 
 
 library(tm)
-corp <- Corpus(URISource(files),
-               readerControl = list(reader = readPDF))
 
-files <- list.files(pattern = "pdf$")
+
+files <- list.files(path = "pdf_supreme_court", 
+                    pattern = "pdf$", 
+                    full.names = TRUE)
 opinions <- lapply(files, pdf_text)
+corp <- VCorpus(VectorSource(opinions))
+corp <- tm_map(corp, removePunctuation, ucp = TRUE)
+opinions.tdm <- TermDocumentMatrix(corp, 
+                                   control = 
+                                     list(
+                                          tolower = TRUE,
+                                          stemming = TRUE,
+                                          removeNumbers = TRUE,
+                                          bounds = list(global = c(1, Inf)))) 
+inspect(opinions.tdm[1:10,])
+findFreqTerms(opinions.tdm, 
+              lowfreq = 100, 
+              highfreq = Inf)
+
+ft <- findFreqTerms(opinions.tdm, 
+                    lowfreq = 5, 
+                    highfreq = Inf) 
+ft_matrix <- as.matrix(opinions.tdm[ft,])  %>% 
+  as_tibble(rownames = pkgconfig::get_config("tibble::rownames", NA)) %>% 
+  rownames_to_column(var = "Word") %>% 
+  rename("Ginsburg" = 2, 
+         "Kagan" = 3, 
+         "Kennedy" = 4, 
+         "O'Connor" = 5, 
+         "Powell" = 6, 
+         "Rehnquist" = 7, 
+         "Roberts" = 8, 
+         "Scalia" = 9, 
+         "Souter" = 10) %>% 
+  arrange(desc(Ginsburg)) %>% 
+   filter(Word == "family" | Word == "women" | Word == "woman" | Word ==  "children" |
+          Word == "father" | Word == "mother" | Word == "abortion" | Word == "Roe" |
+            Word == "abort" | Word == "men" | Word == "man")
+
+
+names(ft_matrix)
+
+
+
+
+
+# corp <- Corpus(URISource(files),
+#                readerControl = list(reader = readPDF))
+
+
+
+
+
 
 
 url <- c("https://www.congress.gov/111/chrg/shrg56940/CHRG-111shrg56940.htm", 
@@ -60,7 +109,7 @@ hearing_words <- hearing_text %>%
 
 filtered_words <- hearing_words %>% 
   filter(word == "family" | word == "women" | word == "woman" | word ==  "children" |
-           word == "father" | word == "mother")
+           word == "father" | word == "mother" | word == "abortion" | word == "Roe")
 
 total_words <- hearing_words %>% 
   group_by(hearing) %>% 
@@ -170,12 +219,12 @@ nomination_data2 <- nomination_data %>%
 plot3 <- ggplot(nomination_data2, aes(year, affirm)) +
   geom_point() + 
   facet_wrap(~equal) +
-  geom_smooth(method = "lm", se = FALSE, color = "#68cdac") + 
+  geom_smooth(method = "lm", se = FALSE, color = "#6889cd") + 
   theme_light() +
   theme(text = element_text(family = "Palatino"),
         axis.text.x = element_text(size = 7),
         axis.text.y = element_text(size = 10)) +
-  theme(strip.background = element_rect(fill = "#68cdac")) +
+  theme(strip.background = element_rect(fill = "#6889cd")) +
   labs(y = "Affirmative Votes", 
        x = "Year (1971-2020)", 
        title = "Political Polarization in Supreme Court Senate Confirmations")
@@ -218,14 +267,21 @@ judges <- read_csv("Alexa_Final_Project_Inner/judges.csv",
     c("ayes_nays" = "ayes_nays_1"), 
     c("date" = "confirmation_date_1"), 
     c("undergrad" = "school_1"), 
-    c("law_school" = "school_2"))
+    c("law_school" = "school_2")) %>% 
+    filter(date >= as.Date("1981-08-19") & date <= as.Date("2020-11-01")) %>% 
+  mutate(president = as.factor(president)) 
+
+
+write_rds(judges, "judges.rds")
   
 ```
 
 ```{r}
 # Arrange judges dataset for the 39 years since Sandra Day O'Connor, the first
 # female Supreme Court Justice was nominated to the US Supreme Court 
+
 library(ggthemes)
+
 judges <- judges %>% 
   filter(date >= as.Date("1981-08-19") & date <= as.Date("2020-11-01")) %>% 
   arrange(date) 
@@ -243,6 +299,12 @@ over_time <- ggplot(judges, aes(x = date, fill = party)) +
        x = "Date", 
        y = "Count") 
 
+over_time
+
+```
+
+```{r}
+
 # table to view the numbers of judges 
 
 stats <- judges %>% 
@@ -259,15 +321,17 @@ stats <- judges %>%
   cols_align(align = "center", columns = TRUE) %>% 
   fmt_markdown(columns = TRUE)
 
-over_time
 stats
+
+```
+```{r}
 
 # just women graphs 
 
 female_nominees <- judges %>% 
   filter(gender == "Female")
 
- ggplot(female_nominees, aes(x = date, fill = party)) + 
+women_graph_nominee <- ggplot(female_nominees, aes(x = date, fill = party)) + 
   geom_histogram(color = "white", binwidth = 300) +
   scale_fill_manual(name = "Nominating Party", 
                     values = c("#6889cd", "#cd7a68"), 
@@ -278,10 +342,16 @@ female_nominees <- judges %>%
   labs(title = "Women Confirmed to Federal Courts", 
        subtitle = "(1981 to 2020)", 
        x = "Date", 
-       y = "Count") + theme_light()
+       y = "Count") 
 
+women_graph_nominee
+
+
+```
+
+```{r}
 female_top10 <- female_nominees %>% 
-  group_by(law_school) %>% 
+  group_by(law_school, party) %>% 
   summarise(law_school_totals = n(), .groups = "drop") %>% 
   filter(law_school %in% c("Yale Law School", 
                            "Harvard Law School", 
@@ -298,16 +368,39 @@ female_top10 <- female_nominees %>%
                            "University of Michigan", 
                            "University of Virginia",	
                            "University of Virginia School of Law", 
-                           "University of Pennsylvania Law School (now Carey Law School)")) %>% 
-  summarise(sum = sum(law_school_totals)/406) %>% 
-  mutate(top_10 = "Female Nominees")
+                           "University of Pennsylvania Law School (now Carey Law School)")) 
 
+female_top10 %>% 
+  ggplot(aes(x = law_school, y = law_school_totals, fill = party)) +
+  geom_col(position = "dodge") +  
+  theme(axis.text.x=element_text(angle =- 10, vjust = 0.5))
+
+female_top10 %>% 
+  filter(party == "Republican") %>% 
+  summarise(sum = sum(law_school_totals))
+
+female_top10 %>% 
+  filter(party == "Democratic") %>% 
+  summarise(sum = sum(law_school_totals))
+
+# 98 - Total from Top 10 
+# 34 - Republicans
+# 64 - Democrats 
+# 409 - Total of female nominees 
+# 178 - Total Rep Nominees 
+# 231 - Total Dem Nominee
+
+# 34/178 = 19.1% (R) 
+
+# 64/231 = 27.7% (D) 
+
+# Democrats may be MORE qualified than their Republican counterparts (?) 
 
 
 
 male_top10 <- judges %>% 
   filter(gender == "Male") %>% 
-  group_by(law_school) %>% 
+  group_by(law_school, party) %>% 
   summarise(law_school_totals = n(), .groups = "drop") %>% 
   filter(law_school %in% c("Yale Law School", 
                            "Harvard Law School", 
@@ -324,16 +417,60 @@ male_top10 <- judges %>%
                            "University of Michigan", 
                            "University of Virginia",	
                            "University of Virginia School of Law", 
-                           "University of Pennsylvania Law School (now Carey Law School)")) %>% 
-  summarise(sum = sum(law_school_totals/1274)) %>% 
-  mutate(top_10 = "Male Nominees")
+                           "University of Pennsylvania Law School (now Carey Law School)"))
 
-top10_table <- full_join(male_top10, female_top10, by = c("sum", "top_10")) %>% 
-  gt() %>% 
-  cols_label(sum = "Attended Top 10", 
-             top_10 = "Gender")
+
+
+male_top10 %>% 
+  filter(party == "Republican") %>% 
+  summarise(sum = sum(law_school_totals))
+
+# 177 
+
+# 853
+# 
+# 177/853 = 20.75%
+
+male_top10 %>% 
+  filter(party == "Democratic") %>% 
+  summarise(sum = sum(law_school_totals))
+
+# 126
+
+# 434
+# 
+# 126/434 = 29%
+
+top10_table <- full_join(male_top10, female_top10, by = c("sum", "top_10"))
 
 top10_table
+
+```
+
+```{r}
+
+library(lubridate)
+
+
+judges %>% 
+filter(date >= as.Date("1981-08-19") & date <= as.Date("2020-11-01")) %>% 
+  mutate(year = year(date)) %>% 
+  filter(president %in% "Ronald Reagan") %>% 
+  group_by(year, gender, president) %>% 
+summarise(totals = n(), .groups = "drop") %>% 
+ggplot(aes(x = year, y = totals, color = gender)) + 
+geom_line() +
+  labs(title = "Federal Court Nominees by President", 
+       x = "Time", 
+       y = "Count") +
+  scale_color_manual(name = "Gender", 
+                     values = c("#cd7a68", "#6889cd"), 
+                     labels = c("Female", "Male"))
+
+
+
+
+
 
 ```
 
