--- a/tidydata.Rmd
+++ b/tidydata.Rmd
@@ -26,6 +26,7 @@ library(ggplot2)
 library(pdftools)
 library(tm)
 library(broom.mixed)
+library(gtsummary)
 
 
 files <- list.files(path = "pdf_supreme_court", 
